versions/v2.10/modules/en/pages/cluster-deployment/custom-clusters/windows/azure-storageclass-configuration.adoc
= Configuring Storage Classes in Azure
:page-languages: [en, zh]
:revdate: 2026-07-14
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/use-windows-clusters/azure-storageclass-configuration.adoc 
:product-path: cluster-deployment/custom-clusters/windows/azure-storageclass-configuration.adoc
ifeval::["{build-type}" != "community"]
:xref-azure-cloud-provider: xref:cluster-deployment/set-up-cloud-providers/azure.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-azure-cloud-provider: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/azure.adoc
endif::[]

If you are using Azure VMs for your nodes, you can use https://docs.microsoft.com/en-us/azure/aks/azure-files-dynamic-pv[Azure files] as a StorageClass for the cluster.

In order to have the Azure platform create the required storage resources, follow these steps:

. {xref-azure-cloud-provider}[Configure the Azure cloud provider.]
. Configure `kubectl` to connect to your cluster.
. Copy the `ClusterRole` and `ClusterRoleBinding` manifest for the service account:
  ```yml
  --
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRole
  metadata:
    name: system:azure-cloud-provider
  rules:
 ** apiGroups: ['']
resources: ['secrets']
verbs:     ['get','create']
  --
  apiVersion: rbac.authorization.k8s.io/v1
  kind: ClusterRoleBinding
  metadata:
name: system:azure-cloud-provider
  roleRef:
kind: ClusterRole
apiGroup: rbac.authorization.k8s.io
name: system:azure-cloud-provider
  subjects:
 ** kind: ServiceAccount
name: persistent-volume-binder
namespace: kube-system
  ```
. Create these in your cluster using one of the follow command.
+
[,shell]
----
# kubectl create -f <MANIFEST>
----
